--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.34.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.17.0",
     "typescript": "~3.2.2"
   }
 }
