--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.8",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
@@ -35,7 +36,7 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
@@ -50,6 +51,7 @@
     "ts-node": "~7.0.0",
     "tsickle": ">=0.34.0",
     "tslint": "^5.17.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "typings": "^2.1.1"
   }
 }
