--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,7 +12,13 @@
     "importHelpers": true,
     "target": "es5",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "src/typings.d.ts"
+    ],
+    "types": [
+      "node_modules/@types",
+      "src/typings.d.ts",
+      "jasmine"
     ],
     "lib": [
       "es2018",
