--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --host 0.0.0.0",
     "build:dev": "ng build",
     "build:prod": "ng build -c production",
-    "test": "ng test",
+    "test:once": "CHROME_BIN=`which chromium-browser` ng test --nowatch --browsers=ChromeHeadless",
+    "test": "CHROME_BIN=`which chromium-browser` ng test --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -42,7 +43,7 @@
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
@@ -53,5 +54,9 @@
     "tslint": "^5.17.0",
     "typescript": "~3.2.2",
     "typings": "^2.1.1"
-  }
+  },
+  "pre-commit": [
+    "test:once",
+    "lint"
+  ]
 }
