--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve --host 0.0.0.0",
     "build:dev": "ng build",
     "build:prod": "ng build -c production",
-    "test:once": "CHROME_BIN=`which chromium-browser` ng test --nowatch --browsers=ChromeHeadless",
-    "test": "CHROME_BIN=`which chromium-browser` ng test --browsers=ChromeHeadless",
+    "test:once": "CHROME_BIN=`which chromium-browser` ng test --nowatch",
+    "test": "CHROME_BIN=`which chromium-browser` ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -47,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha-reporter": "^2.2.5",
     "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
